Fix URL-resolving using derived layer